test/files/neg/t7187-2.14.check
t7187-2.14.scala:6: error: type mismatch;
 found   : Int
 required: () => Any
  val t1: () => Any  = m1   // error
                       ^
t7187-2.14.scala:7: error: type mismatch;
 found   : Int
 required: () => Any
  val t2: () => Any  = m2   // error, no eta-expansion of zero-args methods
                       ^
two errors found
